# wahl

./: .gitignore  .gitmodules  CMakeLists.txt
.github/: dependabot.yml  funding.yml
.github/workflows/: ci.yml
cmake/: Config.cmake.in  InstallProject.cmake  version.hpp.in
docs/: CHANGELOG.md  README.md  _config.yml  code_of_conduct.md  contributing.md  hello_world.md  security.md
examples/basic/: CMakeLists.txt  main.cpp
examples/group/: CMakeLists.txt  main.cpp
include/args/: args.hpp
include/wahl/: argument.hpp  argument_type.hpp  context.hpp  subcommand.hpp  value_parser.hpp  wahl.hpp
include/wahl/internal/: absorb.hpp  auto_register.hpp  each_arg.hpp  is_container.hpp  is_detected.hpp  overload.hpp  rank.hpp  try_help.hpp  try_name.hpp  try_options_metavar.hpp  try_parse.hpp  type_name.hpp  type_to_help.hpp  type_traits.hpp
source/: args.cpp  wahl.cpp
tests/: CMakeLists.txt
tests/source/: basic.cpp  callback.cpp  count.cpp  group.cpp  main.cpp
